--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/public/Vaibhav_light_logo.png" />
+    <link rel="icon" type="image/svg+xml" href="/Vaibhav_light_logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vaibhav Anand</title>
   </head>
